# mhseals_docker

./: .bashrc  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  clone_optional.sh  colcon_defaults.yaml  dev_init.sh  generate_packages.py  headless_setup.linux.sh  install_docker.sh  install_extensions.sh  mdns.sh  optional_repos.yaml  refresh_env.bat  setup.bat  setup.linux.sh  setup.mac.sh  setup.windows.bat
.devcontainer/: .bashrc  Dockerfile  Dockerfile.dev  Dockerfile.sitl  apt-mark.txt  apt-packages.txt  boat.param  dev.bashrc  dev.helper.txt  devcontainer.json  docker-compose.override.jetson.yml  docker-compose.override.linux.yml  docker-compose.override.mac.yml  docker-compose.override.nvidia.yml  docker-compose.override.rpi.yml  docker-compose.override.windows.yml  docker-compose.yml  package-ignore.txt  package-remove.txt  package_clean.sh  pip.conf  postcreate.sh  prebuild.sh  requirements.txt  sitl.bashrc  sitl.entrypoint.sh  sitl.helper.txt  sitl_entrypoint.sh
.devcontainer/features/gazebo/: devcontainer-feature.json  install.sh
.devcontainer/features/zed-sdk/: devcontainer-feature.json  install.sh
config/: dark.rviz
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
src/auto_nav/: CMakeLists.txt  package.xml  setup.cfg
src/auto_nav/description/: ros2_control.xacro
src/auto_nav/launch/: launch_sim.launch.py  rsp.launch.py  (+1 more)
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/mhseals_control/: CMakeLists.txt  package.xml  setup.cfg
src/ros2-slam-auto-navigation/: README.md
(+6 files in other folders)
